Fix: letter-spacing in css

--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,7 @@
 .heading-featured-in {
   font-size: 1.4rem;
   text-transform: uppercase;
-  letter-spacing: 0.75;
+  letter-spacing: 0.75px;
   font-weight: 500;
   text-align: center;
   margin-bottom: 2.4rem;
@@ -404,7 +404,7 @@
   font-size: 2rem;
   font-weight: 600;
   text-transform: uppercase;
-  letter-spacing: 0.75;
+  letter-spacing: 0.75px;
   color: #cf711f;
   margin-bottom: 3.2rem;
 }
